--- a/Hangman_Game/index.html
+++ b/Hangman_Game/index.html
@@ -1,13 +1,49 @@
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link src="fonts/Proxanys.ttf" rel='stylesheet' type='text/css'>        
-	<meta charset="UTF-8">
-	<title>Hangman</title>
-</head>
-<body>
-	<h1 id="toptitle">Hangman<h1>
-	<seciton></section>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/style.css"	>
+		<link src="fonts/Proxanys.ttf" rel='stylesheet' type='	text/css'>        
+		<meta charset="UTF-8">
+		<title>Hangman</title>
+	</head>
+	<header>
+		<h1 id="toptitle">Hangman<h1>
+	</header>
+	<body>
+		<aside>
+			<img id="excecutioner" src="images/executioner.png"/>
+		</aside>
+		<form>
+			<input id="guess-box" type="text" />
+		</form>
+		<div id="row-box">
+			<ul id="alpha-row">
+				<li class="letter-strike">A</li>
+				<li class="letter-strike">B</li>
+				<li class="letter-strike">C</li>
+				<li class="letter-strike">D</li>
+				<li class="letter-strike">E</li>
+				<li class="letter-strike">F</li>
+				<li class="letter-strike">G</li>
+				<li class="letter-strike">H</li>
+				<li class="letter-strike">I</li>
+				<li class="letter-strike">J</li>
+				<li class="letter-strike">K</li>
+				<li class="letter-strike">L</li>
+				<li class="letter-strike">M</li>
+				<li class="letter-strike">N</li>
+				<li class="letter-strike">O</li>
+				<li class="letter-strike">P</li>
+				<li class="letter-strike">Q</li>
+				<li class="letter-strike">R</li>
+				<li class="letter-strike">S</li>
+				<li class="letter-strike">T</li>
+				<li class="letter-strike">U</li>
+				<li class="letter-strike">V</li>
+				<li class="letter-strike">W</li>
+				<li class="letter-strike">X</li>
+				<li class="letter-strike">Y</li>
+				<li class="letter-strike">Z</li>
+			</ul>
+	</body>
 	<script src="js/javman.js"></script>
 </html>
