style change and JS start

--- a/Hangman_Game/index.html
+++ b/Hangman_Game/index.html
@@ -9,9 +9,8 @@
 		<h1 id="toptitle">Hangman<h1>
 	</header>
 	<body>
-		<aside>
 			<img id="excecutioner" src="images/executioner.png"/>
-		</aside>
+			<img id="before-face" src="images/before.png"/>
 		<form>
 			<input id="guess-box" type="text" />
 		</form>
