added gif and css work

--- a/Hangman_Game/index.html
+++ b/Hangman_Game/index.html
@@ -7,10 +7,11 @@
 	</head>
 	<header>
 		<h1 id="toptitle">Hangman<h1>
+		<img id="pulse" src="images/pulse.gif"/>
 	</header>
 	<body>
-			<img id="excecutioner" src="images/executioner.png"/>
-			<img id="before-face" src="images/before.png"/>
+		<img id="excecutioner" src="images/executioner.png"/>
+		<img id="before-face" src="images/before.png"/>
 		<form>
 			<input id="guess-box" type="text" />
 		</form>
