repostion boxes added button

--- a/Hangman_Game/index.html
+++ b/Hangman_Game/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon'/ >
 		<link rel="stylesheet" type="text/css" href="css/style.css"	>
 		<link src="fonts/Proxanys.ttf" rel='stylesheet' type='	text/css'>        
 		<meta charset="UTF-8">
@@ -10,10 +11,21 @@
 		<img id="pulse" src="images/pulse.gif"/>
 	</header>
 	<body>
+		<div class="the-word">
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+			<div class="dubs"></div>
+		</div>
 		<img id="excecutioner" src="images/executioner.png"/>
 		<img id="before-face" src="images/before.png"/>
 		<form>
-			<input id="guess-box" type="text" />
+			<input id="guess-box" type="text"/>
+			<button id="guess-button">Enter</button>
 		</form>
 		<div id="row-box">
 			<ul id="alpha-row">
