--- a/Hangman_Game/index.html
+++ b/Hangman_Game/index.html
@@ -11,51 +11,64 @@
 		<img id="pulse" src="images/pulse.gif"/>
 	</header>
 	<body>
-		<div class="the-word">
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-			<div class="dubs"></div>
-		</div>
 		<img id="excecutioner" src="images/executioner.png"/>
 		<img id="before-face" src="images/before.png"/>
 		<form>
 			<input id="guess-box" type="text"/>
 			<button id="guess-button">Enter</button>
 		</form>
-		<div id="row-box">
-			<ul id="alpha-row">
-				<li class="letter-strike">A</li>
-				<li class="letter-strike">B</li>
-				<li class="letter-strike">C</li>
-				<li class="letter-strike">D</li>
-				<li class="letter-strike">E</li>
-				<li class="letter-strike">F</li>
-				<li class="letter-strike">G</li>
-				<li class="letter-strike">H</li>
-				<li class="letter-strike">I</li>
-				<li class="letter-strike">J</li>
-				<li class="letter-strike">K</li>
-				<li class="letter-strike">L</li>
-				<li class="letter-strike">M</li>
-				<li class="letter-strike">N</li>
-				<li class="letter-strike">O</li>
-				<li class="letter-strike">P</li>
-				<li class="letter-strike">Q</li>
-				<li class="letter-strike">R</li>
-				<li class="letter-strike">S</li>
-				<li class="letter-strike">T</li>
-				<li class="letter-strike">U</li>
-				<li class="letter-strike">V</li>
-				<li class="letter-strike">W</li>
-				<li class="letter-strike">X</li>
-				<li class="letter-strike">Y</li>
-				<li class="letter-strike">Z</li>
-			</ul>
+			<div>
+				<ul id="alpha-row">
+					<li class="letter-strike">A</li>
+					<li class="letter-strike">B</li>
+					<li class="letter-strike">C</li>
+					<li class="letter-strike">D</li>
+					<li class="letter-strike">E</li>
+					<li class="letter-strike">F</li>
+					<li class="letter-strike">G</li>
+					<li class="letter-strike">H</li>
+					<li class="letter-strike">I</li>
+					<li class="letter-strike">J</li>
+					<li class="letter-strike">K</li>
+					<li class="letter-strike">L</li>
+					<li class="letter-strike">M</li>
+					<li class="letter-strike">N</li>
+					<li class="letter-strike">O</li>
+					<li class="letter-strike">P</li>
+					<li class="letter-strike">Q</li>
+					<li class="letter-strike">R</li>
+					<li class="letter-strike">S</li>
+					<li class="letter-strike">T</li>
+					<li class="letter-strike">U</li>
+					<li class="letter-strike">V</li>
+					<li class="letter-strike">W</li>
+					<li class="letter-strike">X</li>
+					<li class="letter-strike">Y</li>
+					<li class="letter-strike">Z</li>
+				</ul>
+			</div>
+			<!-- <!-- <div class="the-word">
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+				<div class="dubs"></div>
+			</div>	 -->	
+			<div>		
+ 				<ul class="flex-container">
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+  					<li class="flex-item">?</li>
+				</ul>
+			</div>
 	</body>
 	<script src="js/javman.js"></script>
 </html>
