quick html change test

--- a/Hangman_Game/index.html
+++ b/Hangman_Game/index.html
@@ -47,16 +47,15 @@
 					<li class="letter-strike">Z</li>
 				</ul>
 			</div>
-			<!-- <!-- <div class="the-word">
+			<!-- <div class="the-word">
 				<div class="dubs"></div>
 				<div class="dubs"></div>
 				<div class="dubs"></div>
 				<div class="dubs"></div>
 				<div class="dubs"></div>
+s				<div class="dubs"></div>
 				<div class="dubs"></div>
-				<div class="dubs"></div>
-				<div class="dubs"></div>
-			</div>	 -->	
+			</div>		 -->
 			<div>		
  				<ul class="flex-container">
   					<li class="flex-item">?</li>
