css change and source tree test

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<button id="guess-button">Enter</button>
 		</form>
 			<div>
-				<ul id="alpha-row">
+				<ul class="alpha-row">
 					<li class="letter-strike">A</li>
 					<li class="letter-strike">B</li>
 					<li class="letter-strike">C</li>
@@ -47,25 +47,16 @@
 					<li class="letter-strike">Z</li>
 				</ul>
 			</div>
-			<!-- <div class="the-word">
-				<div class="dubs"></div>
-				<div class="dubs"></div>
-				<div class="dubs"></div>
-				<div class="dubs"></div>
-				<div class="dubs"></div>
-s				<div class="dubs"></div>
-				<div class="dubs"></div>
-			</div>		 -->
 			<div>		
- 				<ul class="flex-container">
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
-  					<li class="flex-item">?</li>
+ 				<ul class="the-word">
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>
 				</ul>
 			</div>
 	</body>
