--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
 	<head>
 		<link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon'/ >
 		<link rel="stylesheet" type="text/css" href="css/style.css"	>
@@ -49,14 +50,14 @@
 			</div>
 			<div>		
  				<ul class="the-word">
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
-  					<li class="dubs">?</li>
+  					<li class="dubs">?</li>			<!-- W -->
+  					<li class="dubs">?</li>			<!-- A -->
+  					<li class="dubs">?</li>			<!-- R -->
+  					<li class="dubs">?</li>			<!-- R -->
+  					<li class="dubs">?</li>			<!-- I -->
+  					<li class="dubs">?</li>			<!-- O -->
+  					<li class="dubs">?</li>			<!-- R -->
+  					<li class="dubs">?</li>			<!-- S -->
 				</ul>
 			</div>
 	</body>
