commiting from yesterdays work

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<body>
 		<img id="excecutioner" src="images/executioner.png"/>
 		<img id="before-face" src="images/before2.png"/>
-		<form>
+	<!-- 	<form>
 			<input id="guess-box" type="text"/>
 			<button id="guess-button">Enter</button>
-		</form>
+		</form> -->
 			<div>
 				<ul class="alpha-row">
 					<li class="letter-strike" id="A">A</li>
