appended letters to winning box

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 			</div>
 			<div>		
  				<ul class="the-word">
-  					<li class="dubs" id='WW'>?</li>			<!-- W -->
-  					<li class="dubs" id='A'>?</li>			<!-- A -->
-  					<li class="dubs" id='R'>?</li>			<!-- R -->
-  					<li class="dubs" id='R'>?</li>			<!-- R -->
-  					<li class="dubs" id='I'>?</li>			<!-- I -->
-  					<li class="dubs" id='O'>?</li>			<!-- O -->
-  					<li class="dubs" id='R'>?</li>			<!-- R -->
-  					<li class="dubs" id='S'>?</li>			<!-- S -->
+  					<li class="dubs" id='A0'>?</li>			<!-- W -->
+  					<li class="dubs" id='A1'>?</li>			<!-- A -->
+  					<li class="dubs" id='A2'>?</li>			<!-- R -->
+  					<li class="dubs" id='A3'>?</li>			<!-- R -->
+  					<li class="dubs" id='A4'>?</li>			<!-- I -->
+  					<li class="dubs" id='A5'>?</li>			<!-- O -->
+  					<li class="dubs" id='A6'>?</li>			<!-- R -->
+  					<li class="dubs" id='A7'>?</li>			<!-- S -->
 				</ul>
 			</div>
 	</body>
